--- a/styles/main.css
+++ b/styles/main.css
@@ -69,6 +69,7 @@ a {
   .nav__item {
     margin-right: 6%; }
   .nav__item-action {
+    position: relative;
     margin-right: 0;
     margin-left: auto; }
   .nav__link, .nav__link-action {
@@ -77,8 +78,6 @@ a {
     transition: color 0.2s; }
   .nav__link:hover {
     color: #d5c5aa; }
-  .nav__item-action {
-    position: relative; }
   .nav__item-action::before {
     content: "";
     position: absolute;
@@ -109,7 +108,7 @@ a {
     letter-spacing: -2px;
     margin-bottom: 32px; }
   .info__text {
-    font-family: "Open" Sans;
+    font-family: "Open", sans-serif;
     font-weight: normal;
     font-size: 18px;
     margin: 0 0 80px; }
@@ -153,7 +152,7 @@ a {
     left: 145px; }
   .slider__text {
     position: absolute;
-    font-family: "Open" Sans;
+    font-family: "Open", sans-serif;
     font-weight: normal;
     font-size: 14px;
     line-height: 140%;
