--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,9 @@ h3,
 h4,
 a,
 span,
-button {
+button,
+input,
+textarea {
   font-family: Poppins, sans-serif;
   font-weight: bold; }
 
@@ -136,9 +138,6 @@ button {
   transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
   transition: transform 0.5s, -webkit-transform 0.5s; }
-  .button__info {
-    width: 230px;
-    height: 50px; }
   .button:active {
     -webkit-transform: translateY(1px);
             transform: translateY(1px);
@@ -147,6 +146,9 @@ button {
   .button:hover {
     -webkit-transform: scale(1.1);
             transform: scale(1.1); }
+  .button__info {
+    width: 230px;
+    height: 50px; }
 
 .slider {
   position: relative;
@@ -203,9 +205,9 @@ button {
   margin: 150px auto;
   max-width: 750px; }
   .about__heading {
+    color: #253757;
     font-weight: 600;
     font-size: 32px;
-    color: #253757;
     margin: 0 0 16px; }
   .about__text {
     font-weight: 600;
@@ -224,11 +226,11 @@ button {
     max-width: 1100px;
     margin: 140px auto; }
   .expertise__heading {
-    text-align: center;
-    margin: 0 0 64px;
+    color: #253757;
     font-weight: 600;
+    text-align: center;
     font-size: 52px;
-    color: #253757; }
+    margin: 0 0 64px; }
   .expertise__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -265,10 +267,10 @@ button {
     height: 165px;
     margin-bottom: 40px; }
   .direction__heading {
+    color: #253757;
     font-weight: 600;
     font-size: 20px;
     line-height: 140%;
-    color: #253757;
     margin: 0 0 16px; }
   .direction__text {
     font-size: 14px;
@@ -323,10 +325,10 @@ button {
   margin-bottom: 16px; }
 
 .process-info__heading {
+  color: #253757;
   font-weight: 600;
   font-size: 32px;
   line-height: 130%;
-  color: #253757;
   margin-bottom: 24px; }
 
 .process-info__text {
@@ -498,31 +500,30 @@ button {
             flex-direction: column;
     margin-bottom: 30px; } }
 
-.testimonials__title {
-  display: block;
-  font-size: 13px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  color: #c0cdd7;
-  padding-left: 220px;
-  margin-bottom: 16px; }
-
-.testimonials__heading {
-  max-width: 420px;
-  font-weight: 600;
-  font-size: 32px;
-  color: #253757;
-  padding-left: 220px;
-  margin-bottom: 85px; }
-
-.testimonials__person-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0 auto 150px; }
+.testimonials {
+  max-width: 1100px;
+  margin: auto; }
+  .testimonials__title {
+    display: block;
+    font-size: 13px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #c0cdd7;
+    margin-bottom: 16px; }
+  .testimonials__heading {
+    color: #253757;
+    font-weight: 600;
+    max-width: 200px;
+    font-size: 32px;
+    margin-bottom: 85px; }
+  .testimonials__person-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 auto 150px; }
 
 @media (max-width: 999px) {
   .testimonials__person-container {
@@ -699,15 +700,14 @@ button {
 .vision {
   position: relative;
   padding: 200px 0;
-  background: #fff;
-  z-index: -3; }
+  background-color: #fff; }
   .vision__heading {
+    color: #253757;
+    font-weight: 600;
     max-width: 715px;
     margin: 0 auto 25px;
-    font-weight: 600;
     font-size: 52px;
-    text-align: center;
-    color: #253757; }
+    text-align: center; }
   .vision__text {
     max-width: 755px;
     margin: 0 auto 65px;
@@ -729,8 +729,7 @@ button {
     border-radius: 500px;
     border: 3px solid;
     -webkit-transform: rotate(-65.1deg);
-            transform: rotate(-65.1deg);
-    z-index: -2; }
+            transform: rotate(-65.1deg); }
     .vision__small-block:nth-of-type(1) {
       left: 82px;
       top: 370px;
@@ -741,7 +740,7 @@ button {
       border-color: #fcc304; }
     .vision__small-block:nth-of-type(3) {
       left: 480px;
-      top: 465px;
+      top: 405px;
       border: 5px solid #fcc304; }
     .vision__small-block:nth-of-type(4) {
       right: 550px;
@@ -759,8 +758,7 @@ button {
     border-radius: 500px;
     border: 3px solid;
     -webkit-transform: rotate(-65.1deg);
-            transform: rotate(-65.1deg);
-    z-index: -2; }
+            transform: rotate(-65.1deg); }
     .vision__medium-block:nth-of-type(6) {
       left: 233px;
       top: 72px;
@@ -771,7 +769,7 @@ button {
       border: 5px solid #bc04fc; }
     .vision__medium-block:nth-of-type(8) {
       right: 365px;
-      top: 385px;
+      top: 375px;
       border-color: #f25656; }
     .vision__medium-block:nth-of-type(9) {
       right: 65px;
@@ -785,24 +783,228 @@ button {
     border-radius: 500px;
     border: 5px solid #03d542;
     -webkit-transform: rotate(-65.1deg);
-            transform: rotate(-65.1deg);
-    z-index: -2; }
+            transform: rotate(-65.1deg); }
     .vision__large-block:nth-of-type(10) {
       left: 250px;
-      top: 280px; }
+      top: 300px; }
     .vision__large-block:nth-of-type(11) {
       right: 210px;
-      top: 215px; }
+      top: 115px; }
     .vision__large-block:nth-of-type(12) {
       right: 140px;
       top: 410px;
       border-color: #56ccf2; }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .vision__small-block,
   .vision__medium-block,
   .vision__large-block {
     display: none; } }
+
+.footer {
+  background: #fff;
+  color: #fff; }
+  .footer__top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: auto;
+    padding: 180px 0 40px;
+    border-top-right-radius: 150px;
+    background: #008aff; }
+  .footer__message {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-right: 110px; }
+  .footer__contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 110px; }
+  .footer__bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: #008aff;
+    height: 185px;
+    margin: auto; }
+  .footer__logo {
+    width: 45px;
+    height: 25px;
+    margin-right: 230px; }
+  .footer__nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .footer__nav-item {
+    position: relative;
+    margin-right: 65px;
+    text-transform: uppercase; }
+  .footer__nav-item:hover::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: 22px;
+    left: 0;
+    background: #ff9c8e;
+    border-radius: 4px; }
+
+@media (max-width: 999px) {
+  .footer__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .footer__bottom {
+    display: none; } }
+
+.message__heading {
+  font-weight: 600;
+  font-size: 32px;
+  margin-bottom: 55px; }
+
+.message__email {
+  border: none;
+  width: 460px;
+  height: 40px;
+  background-color: #008aff;
+  border-bottom: 2px solid #fff;
+  margin-bottom: 45px; }
+  .message__email::-webkit-input-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__email::-moz-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__email:-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__email::-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__email::placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+
+.message__name, .message__message {
+  border: none;
+  width: 460px;
+  height: 40px;
+  background-color: #008aff;
+  border-bottom: 1px solid #fff;
+  margin-bottom: 45px; }
+  .message__name::-webkit-input-placeholder, .message__message::-webkit-input-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__name::-moz-placeholder, .message__message::-moz-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__name:-ms-input-placeholder, .message__message:-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__name::-ms-input-placeholder, .message__message::-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+  .message__name::placeholder, .message__message::placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    opacity: 0.7; }
+
+.message__message {
+  margin-bottom: 80px; }
+
+.message__button {
+  width: 225px;
+  height: 55px; }
+
+@media (max-width: 999px) {
+  .message {
+    margin: auto;
+    margin-bottom: 30px; }
+    .message__email, .message__name, .message__message {
+      width: 350px; } }
+
+.contact__heading {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 55px; }
+
+.contact__phone-title, .contact__address-title {
+  font-size: 13px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  opacity: 0.5; }
+
+.contact__phone-value, .contact__address-value {
+  font-weight: 600;
+  font-size: 24px;
+  margin: 0 0 45px; }
+
+.contact__media-title {
+  font-size: 13px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  opacity: 0.5;
+  display: block;
+  margin-bottom: 20px; }
+
+.contact__media-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.contact__media-facebook, .contact__media-twitter {
+  margin-right: 35px; }
+
+.contact__media-facebook:hover, .contact__media-twitter:hover, .contact__media-instagram:hover {
+  cursor: pointer;
+  opacity: 0.5; }
+
+@media (max-width: 999px) {
+  .contact {
+    margin: auto;
+    margin-bottom: 30px; } }
 
 * {
   -webkit-box-sizing: border-box;
